Move compath notebooks to resources

--- a/notebooks/Gene centric coverage of Pathway Databases.ipynb
+++ b/notebooks/Gene centric coverage of Pathway Databases.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This notebook explores the core of genes that are part of three of the major pathway databases (KEGG, Reactome, and WikiPathways)\n",
     "\n",
-    "__Summary:__ _A core of aproximately 3800 genes (core gene set) are shared between KEGG, Reactome, and WikiPathways. In other words, most of the genes are shared between these pathway databases (see Fig. 1). The majority of pathways are covered by the genes shared between the three databases (at least by one gene). Finally, conducting a pathway enrichment using different threshold (minimum number of genes are required to enriched the pathway) to observe how the relative coverage of pathways varies._\n",
+    "__Summary:__ _A core of aproximately 3800 genes (core gene set) are shared between KEGG, Reactome, and WikiPathways. In other words, most of the genes are shared between these pathway databases (see Fig. 1). The majority of pathways are covered by the genes shared between the three databases (at least by one gene) (see Fig. 2). Finally, conducting a pathway enrichment using different threshold (minimum number of genes are required to enriched the pathway) to observe how the relative coverage of pathways varies (see Fig. 3)._\n",
     "\n",
     "Author: [Daniel Domingo-Fernández](https://github.com/ddomingof)"
    ]
@@ -35,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline"
@@ -232,7 +234,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "enriched_pathways = {}\n",
